--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,5 @@
     <string name="sign_up">SIGN UP</string>
     <string name="sing_in">SING IN</string>
     <string name="log_out">Log Out</string>
+    <string name="save_all">Save All</string>
 </resources>
