--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="tab_text_3">All Surveys</string>
     <string name="tab_text_4">Fill All</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="add_a_questions">Add A QUESTIONS</string>
+    <string name="add_a_questions">Add A Questions</string>
     <string name="selected">SELECTED</string>
     <string name="clasic">CLASSIC</string>
     <string name="multiple_choice">MULTIPLE CHOICE</string>
@@ -96,5 +96,14 @@
     <string name="sign_up">SIGN UP</string>
     <string name="sing_in">SING IN</string>
     <string name="log_out">Log Out</string>
+
+    <string name="name">Name</string>
+
+    <string name="email">Email</string>
+    <string name="old_password">Old Password</string>
+    <string name="new_password">New Password</string>
+    <string name="Mail_Helper">like : UserName@mail.com</string>
+    <string name="password">Password</string>
+    <string name="write_your_answer">Write your answer</string>
     <string name="save_all">Save All</string>
 </resources>
