--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,7 @@
     <string name="password">Password</string>
     <string name="write_your_answer">Write your answer</string>
     <string name="save_all">Save All</string>
+
+    <string name="publish_link">Publish Link</string>
+    <string name="result">Result</string>
 </resources>
